--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev":"nodemon src/app.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "bcryptjs": "^3.0.2",
+    "express": "^4.21.2",
+    "mongodb": "^6.15.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.14"
   }
 }
